<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_md">

    <RadioGroup
        android:id="@+id/rgSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbNameAsc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_name" />

        <RadioButton
            android:id="@+id/rbNameDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_name_desc" />

        <RadioButton
            android:id="@+id/rbUpdated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_updated" />
    </RadioGroup>
</LinearLayout>
